##Text encoding: utf-8

2011-07-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: start interacting with the keyboard.

2011-07-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: removed obsolete code.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/grid.cc: display a cursor.

2011-07-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: make this dialog instant apply.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/document.h: set the Update() method virtual.
	* libs/gcr/grid.cc: implement row deletion and horizontal expansion.
	* libs/gcr/grid.h: ditto.
	* ui/crystal/cleavages.ui: removed obsolete buttons.

2011-07-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: update libspreadsheet required version.
	* libs/gcr/grid.cc: implement scrolling.

2011-07-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: use next gnumeric API (tentative).
	* libs/gcr/cleavagesdlg.cc: redesigned.
	* libs/gcr/grid.cc: add row headers and a vertical scrollbar.
	* programs/crystal/docprop.cc: fixed window title when document title
	is empty.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.
	* ui/crystal/cleavages.ui: redesigned.

2011-07-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: display existing cleavages.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/grid.cc: ditto.

2011-07-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add signals to GcrGrid.
	* libs/gcr/grid.cc: ditto.
	* libs/gcr/grid.h: ditto.
	* libs/gcugtk/Makefile.am: ditto.
	* libs/gcugtk/marshalers.list: ditto.

2011-07-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: display column headers.
	* ui/crystal/cleavages.ui: restore title.
	* ui/crystal/docprop.ui: redesigned.

2011-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atom.cc: don't scale fractional coordinates.